<resources>
    <string name="app_name">AppOne</string>
    <string name="lblLatitude">Latitude</string>
    <string name="lblLongitude">Longitude</string>
    <string name="lblZero">0.0</string>
    <string name="lblBlank" />
    <string name="lblWelcome">Sample Apps</string>
    <string name="lblGPSTest">GPS Test</string>
    <string name="lblGoBack">Go Back</string>
    <string name="lblGPSCapture">Capture GPS info</string>
    <string name="lblLogin">Login</string>
    <string name="lblPassword">Password:</string>
    <string name="lblUserID">User ID:</string>
    <string name="lblExit">Exit</string>
    <string name="lblDSD">"D.S.D. "</string>
    <string name="lblAdjustments">Start of the day</string>
    <string name="lblSales">Sales</string>
    <string name="lblEndOfTheDay">End of Day</string>
    <string name="lblOrders">Orders</string>
    <string name="lblMiscellaneous">Miscellaneous</string>
    <string name="lblTakePicture">Take Picture</string>
    <string name="lblStoreName">Store Name</string>
    <string name="lblAddress">Address</string>
    <string name="lblCity">City</string>
    <string name="lblArloNo">Arlo No</string>
    <string name="lblStopNo">Stop No</string>
    <string name="lblDisplayStops">View Stops</string>
    <string name="lblDisplayArlos">View Stops</string>
    <string name="lblDisplayMarkets">View Markets</string>
    <string name="lblDisplayProducts">View Products</string>
    <string name="lblScanner">Scanner</string>
    <string name="lblScan">Camera Scanner</string>
    <string name="lblScannedUPC">UPC:</string>
    <string name="lblOk">OK</string>
    <string name="lblCancel">Cancel</string>
    <string-array name="arlos">
        <item>Stop and Shops 1</item>
        <item>Stop and Shops 2</item>
        <item>Walmarts 1</item>
        <item>Kings</item>
        <item>Walmarts 3</item>
        <item>Walmarts 4</item>
        <item>Walmarts 2</item>
        <item>Shoprite 1</item>
        <item>Shoprite 2</item>
        <item>Shoprite 3</item>
        <item>Stop and Shops 3</item>
        <item>Stop and Shops 4</item>
        <item>Stop and Shops 5</item>
        <item>Walmarts 6</item>
    </string-array>
    <string-array name="address">
        <item>Address 1</item>
        <item>Address 2</item>
        <item>Address 3</item>
        <item>Address 4</item>
        <item>Address 5</item>
        <item>Address 6</item>
        <item>Address 7</item>
        <item>Address 8</item>
        <item>Address 9</item>
        <item>Address 10</item>
        <item>Address 11</item>
        <item>Address 12</item>
        <item>Address 13</item>
        <item>Address 14</item>
    </string-array>
    <string name="lblCheckingDB">Database Check</string>
    <string name="lblDBInit">Preparing the Database</string>
    <string name="lblDBRebuild">Rebuilding the Database</string>
    <string name="lblReloadDB">Initialize DB</string>
    <string name="lblDBInitFirstTime">for the first time</string>
    <string name="lblContinue">Continue</string>
    <string name="lblDBOK">Your database is ready</string>
    <string name="lblAdjustmentTitle">Adjustments</string>
    <string name="lblLoad">Load:</string>
    <string name="AdjShort">Short</string>
    <string name="AdjOver">Over</string>
    <string name="lblTotal">Total:</string>
    <string name="lblMainMenu">D.S.D. Main Menu</string>
    <string name="lblDSDMain">D.S.D. Main</string>
    <string name="lblMediaPlayer">Media Player</string>
    <string name="lblPlay1">Play</string>
    <string name="lblPause1">Pause</string>
    <string name="lblStop">Stop</string>
    <string name="lblvideo">Watch Videos</string>
    <string name="lblBackToSound">Back To Sound</string>
    <string name="lblMP3Player">MP3 Player</string>
    <string name="lblYoutube">Youtube</string>
    <string name="lblVideoPlayer">Video Player</string>
    <string name="btnPlay">Play</string>
    <string name="btnStop">Stop</string>
    <string name="btnPause">Pause</string>
    <string name="lblFF"><![CDATA[>>]]></string>
    <string name="lblFB"><![CDATA[<<]]></string>
    <string name="lblLast"><![CDATA[I<]]></string>
    <string name="lblNext"><![CDATA[>I]]></string>
    <string name="lblPlay">></string>
    <string name="lblPause">II</string>
    <string name="lblGallery">Picture gallery</string>
    <string name="title_activity_maps">HHMap</string>
</resources>
