<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_hh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.homannh.dsd.activity.HHActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#c1c1c1"
        android:theme="?attr/actionBarTheme"
        android:minHeight="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:id="@+id/toolbarLogIn" />

    <TextView
        android:text="@string/lblDBInit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:id="@+id/lblCheckingDB"
        android:textSize="24sp"
        android:layout_below="@+id/toolbarLogIn"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/lblDBInitFirstTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/lblCheckingDB2"
        android:textSize="24sp"
        android:layout_below="@+id/lblCheckingDB"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/lblContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_short"
        android:layout_marginTop="167dp"
        android:id="@+id/btnContinue"
        android:onClick="btnContinueClicked"
        android:layout_below="@+id/lblCheckingDB2"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/lblBlank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="86dp"
        android:id="@+id/lblDatabaseOK"
        android:textSize="24sp"
        android:layout_below="@+id/lblCheckingDB2"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
