<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_dsd"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#f1f1f1"
    tools:context="com.example.homannh.dsd.DSDActivity">

    <TextView
        android:text="@string/lblUserID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:id="@+id/lblLogin"
        android:textSize="18sp"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/lblPassword"
        android:layout_alignEnd="@+id/lblPassword" />

    <TextView
        android:text="@string/lblPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblPassword"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/lblLogin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/lblBlank"
        android:ems="10"
        android:layout_alignBottom="@+id/lblLogin"
        android:layout_toRightOf="@+id/lblLogin"
        android:layout_toEndOf="@+id/lblLogin"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="18dp"
        android:id="@+id/txtLogin" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberPassword"
        android:ems="10"
        android:layout_below="@+id/txtLogin"
        android:layout_alignLeft="@+id/txtLogin"
        android:layout_alignStart="@+id/txtLogin"
        android:id="@+id/txtPassword"
        android:text="@string/lblBlank" />

    <Button
        android:text="@string/lblLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:id="@+id/btnLogin"
        android:layout_below="@+id/txtPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@mipmap/newgrey" />

    <Button
        android:text="@string/lblExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="14dp"
        android:id="@+id/btnExit"
        android:background="@mipmap/newgrey"
        android:onClick="btnExitOnClicked" />

</RelativeLayout>
