<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_player"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.homannh.mediaplayer.MP3PlayerActivity">


    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#c1c1c1"
        android:theme="?attr/actionBarTheme"
        android:minHeight="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:id="@+id/toolbarLogIn" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:id="@+id/tvSongName"
        android:textSize="16sp"
        android:layout_below="@+id/toolbarLogIn"
        android:layout_centerHorizontal="true" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar"
        android:layout_below="@+id/tvSongName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp" />

    <Button
        android:text="@string/lblPause"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBar"
        android:layout_margin="20dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/btnPlay"
        android:layout_width="70dp"
        android:textSize="18sp" />


    <Button
        android:text="@string/lblLast"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnLast"
        android:layout_alignBaseline="@+id/btnFB"
        android:layout_alignBottom="@+id/btnFB"
        android:layout_toLeftOf="@+id/btnFB"
        android:layout_toStartOf="@+id/btnFB"
        android:textSize="18sp" />

    <Button
        android:text="@string/lblNext"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnNext"
        android:layout_alignBaseline="@+id/btnFF"
        android:layout_alignBottom="@+id/btnFF"
        android:layout_toRightOf="@+id/btnFF"
        android:layout_toEndOf="@+id/btnFF"
        android:textSize="18sp" />

    <Button
        android:text="@string/lblFF"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnFF"
        android:layout_alignBaseline="@+id/btnPlay"
        android:layout_alignBottom="@+id/btnPlay"
        android:layout_alignLeft="@+id/btnPlay"
        android:layout_alignStart="@+id/btnPlay"
        android:layout_marginLeft="69dp"
        android:layout_marginStart="69dp"
        android:textSize="18sp" />

    <Button
        android:text="@string/lblFB"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnFB"
        android:layout_alignBaseline="@+id/btnPlay"
        android:layout_alignBottom="@+id/btnPlay"
        android:layout_toLeftOf="@+id/btnFF"
        android:layout_toStartOf="@+id/btnFF"
        android:textSize="18sp" />


</RelativeLayout>
