<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_dsdmisc_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.homannh.dsd.activity.DSDMiscMenuActivity">


    <Button
        android:text="@string/lblDisplayArlos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/btnDisplayArlos"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="18sp"
        android:background="@drawable/button_long"
        android:onClick="btnDisplayArlosClicked" />

    <Button
        android:text="@string/lblDisplayMarkets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/btnDisplayMarkets"
        android:layout_below="@id/btnDisplayArlos"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="18sp"
        android:background="@drawable/button_long"
        android:onClick="btnDisplayMarketsClicked" />

    <Button
        android:text="@string/lblDisplayProducts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnDisplayProducts"
        android:layout_below="@+id/btnDisplayMarkets"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:textSize="18sp"
        android:background="@drawable/button_long"
        android:onClick="btnDisplayProductsClicked" />

    <Button
        android:text="@string/lblExit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnExit"
        android:layout_below="@+id/btnDisplayProducts"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:textSize="18sp"
        android:background="@drawable/button_long"
        android:onClick="btnExitOnClicked" />

</RelativeLayout>
