<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_media"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.homannh.appone.MainMediaActivity">

    <TextView
        android:text="@string/lblMediaPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:id="@+id/lblWelcome"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
        android:textStyle="normal|bold" />

    <Button
        android:text="@string/lblMP3Player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:id="@+id/btnOne"
        android:layout_below="@+id/lblWelcome"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_funky"
        android:onClick="btnOneClicked" />

    <Button
        android:text="@string/lblVideoPlayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:id="@+id/btnTwo"
        android:background="@drawable/button_funky"
        android:layout_below="@+id/btnOne"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="btnTwoClicked" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:id="@+id/btnThree"
        android:background="@drawable/button_funky"
        android:layout_below="@+id/btnTwo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="btnThreeClicked"
        android:text="@string/lblYoutube" />

    <Button
        android:text="@string/lblBlank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:id="@+id/btnFour"
        android:background="@drawable/button_funky"
        android:layout_below="@+id/btnThree"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="btnFourClicked" />

    <Button
        android:text="@string/lblBlank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:id="@+id/btnFive"
        android:background="@drawable/button_funky"
        android:layout_below="@+id/btnFour"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="btnFiveClicked" />
    <Button
        android:text="@string/lblBlank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:id="@+id/btnSix"
        android:background="@drawable/button_funky"
        android:layout_below="@+id/btnFive"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="btnSixClicked" />

</RelativeLayout>
