<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_gps"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#d3d7c8"
    tools:context="com.example.homannh.appone.GPSActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="GPS"
        android:id="@+id/lblGPS"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/lblGPS"
        android:text="@string/lblLatitude"
        android:id="@+id/lblLatitue"
        android:textSize="18sp" />

    <TextView
        android:text="@string/lblLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblLongitude"
        android:layout_below="@+id/lblLatitue"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="18sp"/>


    <TextView
        android:text="@string/lblZero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/lblLongitude"
        android:layout_alignLeft="@+id/lblLatitudeValue"
        android:layout_alignStart="@+id/lblLatitudeValue"
        android:id="@+id/lblLongitudeValue"
        android:textSize="18sp"/>

    <TextView
        android:text="@string/lblZero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblLatitudeValue"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:layout_above="@+id/lblLongitudeValue"
        android:layout_toRightOf="@+id/lblLongitude"
        android:layout_toEndOf="@+id/lblLongitude"
        android:textSize="18sp"/>

    <Button
        android:text="@string/lblPauseGPS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnPauseGPS"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@mipmap/sbtn"
        android:onClick="btnPauseGPSOnClicked" />

</RelativeLayout>
